--- a/style.css
+++ b/style.css
@@ -136,17 +136,20 @@ notebook/pc:
 
 @media screen and (min-width: 480px) {
 
+
+.hlavni-recept {
+    flex-basis: 250px;
+    padding: 1.25rem;
+}
+
 .sloupec {
     display: flex;
     flex-direction: row;
 }
 
-.hlavni-recept {
-    flex-basis: 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border-bottom: 1px solid #fff;
+.recept {
+    flex: 50%;
+    border-right: 1px solid #fff;
 }
 
 
