--- a/style.css
+++ b/style.css
@@ -48,8 +48,6 @@ notebook/pc:
 
 /*MOBILE FIRST*/
 
-@media screen and (min-width: 320px) {
-
 .doporucujeme {
     display: flex;
     flex-direction: column;
@@ -65,7 +63,7 @@ notebook/pc:
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    flex-basis: 200px;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -92,6 +90,7 @@ notebook/pc:
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-height: 90px;
     padding: 0.5rem;
     border-bottom: 1px solid #fff;
     background-repeat: no-repeat;
@@ -130,7 +129,7 @@ notebook/pc:
 .paticka {
     display: none;
 }
-}
+
 
 /*TABLET*/
 
@@ -138,20 +137,30 @@ notebook/pc:
 
 
 .hlavni-recept {
-    flex-basis: 250px;
+    min-height: 250px;
     padding: 1.25rem;
 }
 
 .sloupec {
-    display: flex;
-    flex-direction: row;
+display: flex;
 }
 
 .recept {
     flex: 50%;
-    border-right: 1px solid #fff;
+    min-height: 150px;
+    padding: 1.25rem;
 }
 
+.recept2,
+.recept4 {
+    border-right: 0.5px solid #fff;
+}
+
+.recept3,
+.recept5 {
+    border-left: 0.5px solid #fff;
+}
 
 }
+
 
